tests/fixtures/invalid/pow_float_int_list.py
# Cannot call pow() with Float, Int, List[int]
x = pow(1.0, 1, [1, 2, 3])
